# vSPACE

./: .gitignore  SETUP.md  requirements.txt  run.sh  vSPACE_Augmented_PRD_v260412a.json  vSPACE_Autonomous_PRD_v260412a.json  v_train_extended.csv
.sisyphus/: ralph-loop.local.md
_references/secure-e-voting/: 00_FormalBench_EF_DA_TASK_Unified.ipynb  README.md
apps/: cross_origin_relay.py
apps/vspacevote/: app.py
apps/vspacewallet/: app.py
bench/: BENCHMARKS.md  __init__.py  run_benchmarks.py
bench/AGI_EF_Tasks__TEVV_Bench/: AGI_EF_Tasks__All__Sample10-run_id_Run_1_anthropic_claude-opus-4-6default.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_anthropic_claude-opus-4-6default.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_anthropic_claude-sonnet-4-6default.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_anthropic_claude-sonnet-4-6default.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_deepseek-ai_deepseek-v3.2.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_deepseek-ai_deepseek-v3.2.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemini-2.5-flash.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemini-2.5-flash.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemini-3.1-flash-lite-preview.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemini-3.1-flash-lite-preview.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemini-3.1-pro-preview.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemini-3.1-pro-preview.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemma-3-4b.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemma-3-4b.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemma-4-26b-a4b.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemma-4-26b-a4b.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemma-4-31b.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_google_gemma-4-31b.run.json.LOG.txt  AGI_EF_Tasks__All__Sample10-run_id_Run_1_openai_gpt-5.4-2026-03-05.run.json  AGI_EF_Tasks__All__Sample10-run_id_Run_1_zai_glm-5.run.json  (+39 more)
benchmark_output/: Comprehensive_TEVV_Report_v2.md  E2E_TEVV_Comprehensive_Report.md
bindings/python/electionguard_vspace/: __init__.py  binding.py  constants.py  multiholder.py  pyproject.toml  record.py  saac.py  serial.py  types.py
bindings/rust/vspace-verify/: Cargo.toml
bindings/rust/vspace-verify/src/: binding.rs  constants.rs  errors.rs  lib.rs  saac.rs  serial.rs  types.rs
demo/: a2a_workflow.py  benchmark_suite.py  generate_visuals.py  mock_data.py  run_e2e_poc.py  workflow.py
infrastructure/: docker-compose.yml  setup-keycloak.sh
setup/: .env.example  validate.py  wizard.py
(+25 files in other folders)
