[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "electionguard-vspace"
version = "0.1.0"
description = "vSPACE anonymous credential extensions for ElectionGuard"
authors = ["vSPACE Team <team@vspacevote.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vSpaceVote/vSPACE"
keywords = ["electionguard", "voting", "anonymous-credentials", " cryptography", "saac", "bbs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Government :: Elections",
]

[tool.poetry.dependencies]
python = "^3.9"
ecdsa = ">=0.18"
pycryptodome = ">=3.19"
cryptography = ">=43.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
mypy = "^1.0"
black = "^23.0"
ruff = "^0.1"

[tool.poetry.extras]
verification = ["pycryptodome"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "D", "UP", "ANN", "B", "A", "C4", "DTZ", "T20", "RET", "SIM", "ARG"]