[package]
name = "vspace-verify"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "vSPACE Verifier Extension for ElectionGuard - Anonymous Credential Verification"
repository = "https://github.com/vSpaceVote/vSPACE"
keywords = ["election", "voting", "cryptography", "anonymous-credentials", "electionguard"]
categories = ["cryptography", "authentication"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"
num-bigint = "0.4"
num-traits = "0.2"
elliptic-curve = { version = "0.13", features = ["sec1"] }
p256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
p384 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
bls12_381 = "0.8"
ff = "0.13"
group = "0.13"
rand_core = "0.6"

[dev-dependencies]
proptest = "1.4"

[features]
default = ["saac", "binding", "serial"]
saac = []
binding = []
serial = []
full = ["saac", "binding", "serial"]

[[bench]]
name = "verification_benchmark"
harness = false